# heartbeat-backend

./: .gitignore  Dockerfile  MIGRATION.md  PROTOCOL.md  README.md  docker-compose.yaml  entrypoint.sh  example.env  makedist.sh  pyproject.toml  requirements.txt
src/: hbdb.sqlite3  manage.py  run_server.sh  update_copy_of_staticfiles.sh  update_schema.sh
src/hb_backend/: apps.py  asgi.py  decorators.py  hbserver.py  models.py  settings.py  views.py  wsgi.py
src/hb_backend/migrations/: 0001_initial.py  0002_heartbeatentry_sender_ip.py  0003_maintenancewindow_watcherstate_and_more.py  0004_clientkey_deviceflowsession.py  0005_deviceflowsession_client_name.py  0007_clientkey_expires_at.py
src/heartbeat-backend/: hbserver.py
src/heartbeat_backend/: admin.py  asgi.py  decorators.py  hbserver.py  models.py  settings.py  urls.py  views.py  wsgi.py
src/heartbeat_backend/examples/: hbserver.service-example_systemd
src/heartbeat_backend/migrations/: 0001_initial.py  0003_maintenancewindow_watcherstate_and_more.py  0004_clientkey_deviceflowsession.py  0006_heartbeatentry_enforce_encryption_and_more.py  0007_clientkey_expires_at.py
src/heartbeat_backend/static/css/: force_sidebar_right.css
tests/: conftest.py  test_decorators.py  test_models.py
